@@ -475,7 +475,7 @@ DoubleFloat(): Join(FloatingPointSystem, DifferentialRing, OpenMath,
    x = y            == (x=y)$Lisp
    x:% / i:Integer  == (x/i)$Lisp
    sqrt x           == checkComplex SQRT(x)$Lisp
-   log10 x          == checkComplex log(x)$Lisp
+   log10 x          == checkComplex LOG10(x)$Lisp
    x:% ^ i:Integer == EXPT(x,i)$Lisp
    x:% ^ y:%       == checkComplex EXPT(x,y)$Lisp
    coerce(i:Integer):% == FLOAT(i,MOST_-POSITIVE_-DOUBLE_-FLOAT$Lisp)$Lisp
