@@ -100,6 +100,4 @@
 ; $COMP-MACROLIST is actually a macro call
 
 (defparameter $COMP-MACROLIST
-  '(COLLECT REPEAT SUCHTHATCLAUSE THETA COLLECTV COLLECTVEC
-            THETA1 SPADREDUCE SPADDO)
-  "???")
+  '(COLLECT REPEAT SUCHTHATCLAUSE THETA COLLECTV COLLECTVEC SPADDO))
