@@ -232,28 +232,6 @@ foo defined inside of fum gets renamed as fum,foo.")
       (CONS (FIRST X) (CONS (CONS 'SPADLET (CDADR X)) (CDDR X)))
       X))
 
-(defun DEF-select (L)
-  (cond ((IDENTP (FIRST L)) (DEF-select1 (FIRST L) (SECOND L)))
-        ((LET* ((G (GENSYM))
-                (U (DEF-select1 G (SECOND L))))
-           (LIST 'PROGN (LIST 'SPADLET G (FIRST L)) U)))))
-
-(defun DEF-select1 (X Y)
-  (if (EQCAR Y 'SEQ)
-      (CONS 'COND (DEF-select2 X (CDR Y)))
-      (MOAN (format nil "Unexpected CASE body: ~S" Y))))
-
-(defun DEF-select2 (X Y)
-  (let (u v)
-    (COND ((NOT Y) (MOAN "Unexpected CASE clause termination"))
-          ((EQCAR (setq U (FIRST Y)) 'EXIT)
-           (LIST (LIST ''T (SECOND U))))
-          ((AND (EQCAR U 'COND) (NOT (CDDR U))
-                (EQCAR (SECOND (setq V (SECOND U))) 'EXIT))
-           (CONS (LIST (DEF-IS (LIST X (FIRST V))) (CADADR V))
-                 (DEF-select2 X (CDR Y))))
-          ((MOAN (format nil "Unexpected CASE clause: ~S" (FIRST Y)))))))
-
 (defun DEF-IT (FN L)
   (setq L (reverse L))
   (let ((B (first L)))
