@@ -1,3 +1,13 @@
+2009-06-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/sf.spad.pamphlet,
+	src/interp/def.lisp, src/interp/parsing.lisp,
+	src/interp/compiler.boot, src/interp/util.lisp,
+	src/interp/comp.lisp, src/interp/bootlex.lisp,
+	src/interp/union.lisp, src/interp/g-boot.boot,
+	src/interp/macros.lisp, src/interp/wi1.boot,
+	src/interp/vmlisp.lisp: Misc cleanups.
+
 2009-06-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/*.spad.pamphlet: replace $ by %
